News UAT/force-app/main/default/objects/Notification_Event_Setting__c/Notification_Event_Setting__c.object-meta.xml
<CustomObject>
    <label>Notification Event Setting</label>
    <nameField>
        <displayFormat>EV-{000000}</displayFormat>
        <label>Notification Event Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Event Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>