News UAT/force-app/main/default/objects/Notification_Event_Setting__c/fields/Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Button_Name__c</fullName>
    <label>Button Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>