News UAT/force-app/main/default/objects/Notification_Event_Setting__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>CASE(RecordType.Name,&#39;Milestone&#39;, RecordType.Name + &#39;_&#39; + Process_Name__c + &#39;_&#39; +  Step_Name__c,
&#39;Object&#39;, RecordType.Name + &#39;_&#39; +  TEXT(Object_Name__c) + &#39;_&#39; +  Field_Name__c + &#39;_&#39; +  From_Value__c + &#39;_&#39; +  To_Value__c,
&#39;Button&#39;, RecordType.Name + &#39;_&#39; +  TEXT(Object_Name__c) + &#39;_&#39; +  Button_Name__c,
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>