News UAT/force-app/main/default/objects/Notification_Event_Setting__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order__c</fullName>
                <label>Campaign Order</label>
            </value>
            <value>
                <fullName>Product_Order__c</fullName>
                <label>Product Order</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>