News UAT/force-app/main/default/objects/Notification_Event_Setting__c/recordTypes/Button.recordType-meta.xml
<RecordType>
    <fullName>Button</fullName>
    <active>true</active>
    <description>Button event</description>
    <label>Button</label>
</RecordType>