News UAT/force-app/main/default/objects/Notification_Event_Setting__c/recordTypes/Milestone.recordType-meta.xml
<RecordType>
    <fullName>Milestone</fullName>
    <active>true</active>
    <description>Milestone event</description>
    <label>Milestone</label>
</RecordType>