News UAT/force-app/main/default/objects/Notification_Event_Setting__c/recordTypes/Object.recordType-meta.xml
<RecordType>
    <fullName>Object</fullName>
    <active>true</active>
    <description>Object event</description>
    <label>Object</label>
</RecordType>